--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.18.0",
     "sqlite3": "^5.1.7",
     "unidecode": "^0.1.8"
