--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-session": "^1.19.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "pg": "^8.18.0",
     "sharp": "^0.34.5",
     "sqlite3": "^5.1.7",
