--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "import:mee6": "node src/mee6Import.js"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "canvas": "^3.2.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
@@ -18,8 +19,11 @@
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "pg": "^8.18.0",
+    "prism-media": "^1.3.5",
+    "opusscript": "^0.0.8",
     "sharp": "^0.34.5",
     "sqlite3": "^5.1.7",
+    "google-tts-api": "^2.0.2",
     "unidecode": "^0.1.8"
   }
 }
