Complete rebrand from Lop-Bot to Moist Lieutenant - Remove all personalized features (cookies, shame, riley commands), remove MEE6 import, remove message reactions, update all branding

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "lop-bot",
+  "name": "moist-lieutenant",
   "version": "1.0.0",
   "main": "src/index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node src/index.js",
-    "import:mee6": "node src/mee6Import.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
